Add optional remote Mirakurun connection management and recovery
